Fixed bug whre scores are displayed behind gameboard

--- a/Client/src/less/game.less
+++ b/Client/src/less/game.less
@@ -32,7 +32,6 @@ body {
     background-color: @pallete-1;
 }
 .grid-container {
-    position: absolute;
     z-index: 1;
 }
 .grid-row {
